# RockAndWater

./: .gitignore  Cargo.toml  README.md  app_settings.toml
notes/: model.md
resources/shaders/: phong.frag  phong.vert  shader.vert  solid_color.vert
resources/textures/: credits.md
src/: app.rs  input.rs  main.rs  model.rs  objects.rs  renderer.rs  rock_and_water.sublime-workspace
src/model/: mesh.rs  transform.rs
src/objects/: camera.rs  cube.rs  lamp.rs  mesh.rs  model.rs
src/renderer/: pipeline.rs  texture.rs
