[package]
name = "rock_and_water"
version = "0.1.0"
authors = ["James Longino <james.longino@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
winit = "0.21"
wgpu = "0.4"
glsl-to-spirv = "0.1"
simple_logger = "1.6"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2"
glam = "0.8"
image = "0.23"